# GRAG

./: .editorconfig  .gitignore  Dockerfile  GRAG_COMPLETION_REPORT.md  IMPROVEMENTS.md  Makefile  QUICK_START.md  README.md  app.py  deploy.sh  main.py  pyproject.toml  requirements.txt  server.py  typesense.ipynb
.github/workflows/: ci.yml
data/text_files/: machine_learning_guide.txt
data/vector_store/24c622b4-38ef-48d2-bdfa-5843ef37487d/: index_metadata.pickle
data/vector_store/4de72336-ca1b-4429-bbb5-ff9aacf6936a/: index_metadata.pickle
gui/: server.py
gui/static/: app.js  index.html  style.css
src/: data_loader.py  embedding.py  search.py  vectorstore.py
tests/: test_data_loader.py
