[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grag"
version = "0.1.0"
description = "GRAG - Generative Retrieval-Augmented Generation portal for document search, retrieval, and Q&A"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "pypdf>=5.0.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "typesense>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "jinja2>=3.1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
